# aialogue

./: .pre-commit-config.yaml  Dockerfile  README.md  fly.toml
.github/: dependabot.yaml
.github/workflows/: run-tests.yaml
backend/: pyproject.toml
backend/aialogue/: __init__.py  __main__.py  utils.py
frontend/: package-lock.json  package.json  rollup.config.js
frontend/public/: global.css  index.html
frontend/src/: App.svelte
